<resources>
    <string name="app_name">Tic-tac-toe</string>

    <string name="mode_easy">Easy</string>
    <string name="mode_medium">Medium</string>
    <string name="mode_impossible">Impossible</string>
    <string name="mode_other_player">Play with other person</string>
    <string name="mode_learn">Learn mode</string>
    <string name="settings">Settings</string>
    <string name="clear_score">Clear score</string>

    <string name="result_x_victory">Winner: X</string>
    <string name="result_o_victory">Winner: O</string>
    <string name="result_message_draw">Cat\'s game!</string>

    <string name="instruction_game_start">Touch to start</string>
    <string name="instruction_o_turn">O turn</string>
    <string name="instruction_x_turn">X turn</string>

    <string name="score_o" translatable="false">O: %d</string>
    <string name="score_x" translatable="false">X: %d</string>

    <string name="restart_game">restart game</string>

    <string name="suggestion_missed_victory">you missed a winner move</string>
    <string name="suggestion_missed_defeat">if you don\'t be smart, you\'ll lose!</string>

    <string name="open_drawer">Open lateral menu</string>
    <string name="close_drawer">Close lateral menu</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="record_score">Record score</string>
    <string name="record_score_on">Record</string>
    <string name="record_score_off">Don\'t record</string>
    <string name="reply_title">Default reply action</string>
</resources>
