<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.FirstSetupActivity"
        android:orientation="vertical">

    <Button
            style="@style/ModeButton"
            android:id="@+id/btEasy"
            android:layout_width="match_parent"
            android:text="@string/mode_easy"/>

    <Button
            style="@style/ModeButton"
            android:id="@+id/btMedium"
            android:text="@string/mode_medium"/>

    <Button
            style="@style/ModeButton"
            android:id="@+id/btImpossible"
            android:text="@string/mode_impossible"/>

    <Button
            style="@style/ModeButton"
            android:id="@+id/btOtherPlayer"
            android:text="@string/mode_other_player"/>
</LinearLayout>